# Agentic-rag

./: .gitignore  Codex_instructions.txt  pyproject.toml
app/: agent_graph.mmd  main.py
app/api/: routes.py  schemas.py
app/config/: settings.py
app/graph/: builder.py  conditional_edges.py  runner.py  state.py  visualize.py
app/llm/: gemini.py
app/nodes/: 2_1_intent_planner.py  2_2_escalation.py  node_1_0_safety_classifier.py  node_2_0_intent_planner.py  node_2_1_escalation.py  node_3_0_query_rewriter.py  node_4_0_rag_retriever.py  node_4_1_web_search.py  node_5_0_evidence_evaluator.py  node_6_0_answer_generator.py  node_7_0_answer_verifier.py  node_7_1_answer_revision.py
app/prompts/: answer_generator.py  answer_revision.py  answer_verifier.py  evidence_evaluator.py  intent_planner.py  query_rewriter.py  safety_classifier.py
app/tools/: embeddings.py  rag.py  tavily.py
app/utils/: evidence.py  messages.py
app/vectorstore/: faiss_store.py  ingest.py
